--- a/.env.example
+++ b/.env.example
@@ -5,10 +5,10 @@ APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
-DB_CONNECTION=mysql
+DB_CONNECTION=sqlite
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
+DB_DATABASE=database/database.sqlite
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
@@ -33,3 +33,4 @@ PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 
 OPEN_WEATHER_MAP_KEY=
+OPEN_WEATHER_MAP_CALLS_PER_MINUTE=60
